// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pictures multiple pictures 1`] = `
Array [
  Object {
    "href": Object {
      "parent": Object {
        "href": [Circular],
        "label": Object {
          "parent": [Circular],
          "pos": Object {
            "end": 14,
            "start": 3,
          },
          "text": "image-label",
          "type": "Text",
        },
        "name": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 41,
              "start": 38,
            },
            "text": "asd",
            "type": "Text",
          },
        ],
        "parent": Object {
          "children": [Circular],
          "parent": null,
          "path": "test.md",
          "pos": Object {
            "end": 147,
            "start": 0,
          },
          "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
          "type": "File",
        },
        "pos": Object {
          "end": 42,
          "start": 1,
        },
        "type": "Image",
        "width": "14cm",
      },
      "pos": Object {
        "end": 24,
        "start": 16,
      },
      "text": "test.png",
      "type": "Text",
    },
    "index": 0,
    "label": Object {
      "parent": Object {
        "href": Object {
          "parent": [Circular],
          "pos": Object {
            "end": 24,
            "start": 16,
          },
          "text": "test.png",
          "type": "Text",
        },
        "label": [Circular],
        "name": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 41,
              "start": 38,
            },
            "text": "asd",
            "type": "Text",
          },
        ],
        "parent": Object {
          "children": [Circular],
          "parent": null,
          "path": "test.md",
          "pos": Object {
            "end": 147,
            "start": 0,
          },
          "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
          "type": "File",
        },
        "pos": Object {
          "end": 42,
          "start": 1,
        },
        "type": "Image",
        "width": "14cm",
      },
      "pos": Object {
        "end": 14,
        "start": 3,
      },
      "text": "image-label",
      "type": "Text",
    },
    "name": Array [
      Object {
        "children": Array [],
        "parent": Object {
          "href": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 24,
              "start": 16,
            },
            "text": "test.png",
            "type": "Text",
          },
          "label": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 14,
              "start": 3,
            },
            "text": "image-label",
            "type": "Text",
          },
          "name": Array [
            [Circular],
          ],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 147,
              "start": 0,
            },
            "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
            "type": "File",
          },
          "pos": Object {
            "end": 42,
            "start": 1,
          },
          "type": "Image",
          "width": "14cm",
        },
        "pos": Object {
          "end": 41,
          "start": 38,
        },
        "text": "asd",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 147,
        "start": 0,
      },
      "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
      "type": "File",
    },
    "pos": Object {
      "end": 42,
      "start": 1,
    },
    "type": "PictureProcessed",
    "width": "14cm",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 61,
          "start": 44,
        },
        "text": "Look at the pic. ",
        "type": "Text",
      },
      Object {
        "index": 1,
        "parent": [Circular],
        "pos": Object {
          "end": 79,
          "start": 61,
        },
        "type": "PictureKey",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 84,
          "start": 79,
        },
        "text": " and ",
        "type": "Text",
      },
      Object {
        "index": 0,
        "parent": [Circular],
        "pos": Object {
          "end": 100,
          "start": 84,
        },
        "type": "PictureKey",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 101,
          "start": 100,
        },
        "text": ".",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 147,
        "start": 0,
      },
      "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
      "type": "File",
    },
    "pos": Object {
      "end": 101,
      "start": 44,
    },
    "type": "Paragraph",
  },
  Object {
    "href": Object {
      "parent": Object {
        "href": [Circular],
        "label": Object {
          "parent": [Circular],
          "pos": Object {
            "end": 118,
            "start": 105,
          },
          "text": "image-label-2",
          "type": "Text",
        },
        "name": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 145,
              "start": 142,
            },
            "text": "asd",
            "type": "Text",
          },
        ],
        "parent": Object {
          "children": [Circular],
          "parent": null,
          "path": "test.md",
          "pos": Object {
            "end": 147,
            "start": 0,
          },
          "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
          "type": "File",
        },
        "pos": Object {
          "end": 146,
          "start": 103,
        },
        "type": "Image",
        "width": "14cm",
      },
      "pos": Object {
        "end": 128,
        "start": 120,
      },
      "text": "test.png",
      "type": "Text",
    },
    "index": 1,
    "label": Object {
      "parent": Object {
        "href": Object {
          "parent": [Circular],
          "pos": Object {
            "end": 128,
            "start": 120,
          },
          "text": "test.png",
          "type": "Text",
        },
        "label": [Circular],
        "name": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 145,
              "start": 142,
            },
            "text": "asd",
            "type": "Text",
          },
        ],
        "parent": Object {
          "children": [Circular],
          "parent": null,
          "path": "test.md",
          "pos": Object {
            "end": 147,
            "start": 0,
          },
          "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
          "type": "File",
        },
        "pos": Object {
          "end": 146,
          "start": 103,
        },
        "type": "Image",
        "width": "14cm",
      },
      "pos": Object {
        "end": 118,
        "start": 105,
      },
      "text": "image-label-2",
      "type": "Text",
    },
    "name": Array [
      Object {
        "children": Array [],
        "parent": Object {
          "href": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 128,
              "start": 120,
            },
            "text": "test.png",
            "type": "Text",
          },
          "label": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 118,
              "start": 105,
            },
            "text": "image-label-2",
            "type": "Text",
          },
          "name": Array [
            [Circular],
          ],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 147,
              "start": 0,
            },
            "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
            "type": "File",
          },
          "pos": Object {
            "end": 146,
            "start": 103,
          },
          "type": "Image",
          "width": "14cm",
        },
        "pos": Object {
          "end": 145,
          "start": 142,
        },
        "text": "asd",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 147,
        "start": 0,
      },
      "raw": "
![image-label](test.png)(@w 14cm)(@n asd)

Look at the pic. !PK[image-label-2] and !PK[image-label].

![image-label-2](test.png)(@w 14cm)(@n asd)
",
      "type": "File",
    },
    "pos": Object {
      "end": 146,
      "start": 103,
    },
    "type": "PictureProcessed",
    "width": "14cm",
  },
]
`;

exports[`references multiple references 1`] = `
Array [
  Object {
    "errorType": 2,
    "filePath": "test.md",
    "message": "Unused reference label ref-2",
    "pos": Object {
      "end": Object {
        "absolute": 38,
        "column": 2,
        "line": 7,
      },
      "start": Object {
        "absolute": 20,
        "column": 1,
        "line": 5,
      },
    },
    "severity": "WARNING",
  },
]
`;

exports[`references multiple references 2`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 137,
          "start": 59,
        },
        "text": "Block-Matching Convolutional Neural Network for Image Denoising described in [",
        "type": "Text",
      },
      Object {
        "index": 0,
        "parent": [Circular],
        "pos": Object {
          "end": 147,
          "start": 137,
        },
        "type": "ReferenceKey",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 149,
          "start": 147,
        },
        "text": ", ",
        "type": "Text",
      },
      Object {
        "index": 1,
        "parent": [Circular],
        "pos": Object {
          "end": 159,
          "start": 149,
        },
        "type": "ReferenceKey",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 161,
          "start": 159,
        },
        "text": "].",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 177,
        "start": 0,
      },
      "raw": "
!R[ref-1](
    A
)
!R[ref-2](
    B
)
!R[ref-3](
    C
)

Block-Matching Convolutional Neural Network
for Image Denoising described in [!RK[ref-3], !RK[ref-1]].

!LAR[]
!LAA[]
",
      "type": "File",
    },
    "pos": Object {
      "end": 161,
      "start": 59,
    },
    "type": "Paragraph",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 47,
                      "start": 42,
                    },
                    "text": "ref-3",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 41,
                      "start": 40,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 177,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    A
)
!R[ref-2](
    B
)
!R[ref-3](
    C
)

Block-Matching Convolutional Neural Network
for Image Denoising described in [!RK[ref-3], !RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 57,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 57,
                    "start": 39,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 55,
                  "start": 54,
                },
                "text": "C",
                "type": "Text",
              },
            ],
            "index": 0,
            "parent": [Circular],
            "pos": Object {
              "end": 55,
              "start": 54,
            },
            "type": "Reference",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 177,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    A
)
!R[ref-2](
    B
)
!R[ref-3](
    C
)

Block-Matching Convolutional Neural Network
for Image Denoising described in [!RK[ref-3], !RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 57,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 19,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 17,
                  "start": 16,
                },
                "text": "A",
                "type": "Text",
              },
            ],
            "index": 1,
            "parent": [Circular],
            "pos": Object {
              "end": 17,
              "start": 16,
            },
            "type": "Reference",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 169,
          "start": 163,
        },
        "type": "AllReferences",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 176,
          "start": 170,
        },
        "type": "AllApplications",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 177,
        "start": 0,
      },
      "raw": "
!R[ref-1](
    A
)
!R[ref-2](
    B
)
!R[ref-3](
    C
)

Block-Matching Convolutional Neural Network
for Image Denoising described in [!RK[ref-3], !RK[ref-1]].

!LAR[]
!LAA[]
",
      "type": "File",
    },
    "pos": Object {
      "end": 176,
      "start": 163,
    },
    "type": "Paragraph",
  },
]
`;

exports[`references simple reference 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 236,
          "start": 158,
        },
        "text": "Block-Matching Convolutional Neural Network for Image Denoising described in [",
        "type": "Text",
      },
      Object {
        "index": 0,
        "parent": [Circular],
        "pos": Object {
          "end": 246,
          "start": 236,
        },
        "type": "ReferenceKey",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 248,
          "start": 246,
        },
        "text": "].",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 264,
        "start": 0,
      },
      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
      "type": "File",
    },
    "pos": Object {
      "end": 248,
      "start": 158,
    },
    "type": "Paragraph",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 20,
                  "start": 16,
                },
                "text": "Ahn,",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 21,
                  "start": 20,
                },
                "type": "ThinNonBreakingSpace",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 35,
                  "start": 21,
                },
                "text": "Byeongyong; Ik",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 36,
                  "start": 35,
                },
                "type": "ThinNonBreakingSpace",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 40,
                  "start": 36,
                },
                "text": "Cho,",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 41,
                  "start": 40,
                },
                "type": "ThinNonBreakingSpace",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 47,
                  "start": 41,
                },
                "text": "Nam (3",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 49,
                  "start": 47,
                },
                "type": "NonBreakingSpace",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 54,
                  "start": 49,
                },
                "text": "April",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 56,
                  "start": 54,
                },
                "type": "NonBreakingSpace",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 63,
                  "start": 56,
                },
                "text": "2017).     ",
                "type": "Text",
              },
              Object {
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 132,
                  "start": 67,
                },
                "text": "Block-Matching Convolutional Neural Network for Image Denoising",
                "type": "CodeSpan",
              },
              Object {
                "children": Array [],
                "parent": Object {
                  "keyArgs": Object {},
                  "keys": Object {},
                  "label": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 9,
                      "start": 4,
                    },
                    "text": "ref-1",
                    "type": "Text",
                  },
                  "opcode": Object {
                    "parent": [Circular],
                    "pos": Object {
                      "end": 3,
                      "start": 2,
                    },
                    "text": "R",
                    "type": "Text",
                  },
                  "parent": Object {
                    "children": Array [],
                    "parent": Object {
                      "children": [Circular],
                      "parent": null,
                      "path": "test.md",
                      "pos": Object {
                        "end": 264,
                        "start": 0,
                      },
                      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
                      "type": "File",
                    },
                    "pos": Object {
                      "end": 156,
                      "start": 1,
                    },
                    "type": "Paragraph",
                  },
                  "pos": Object {
                    "end": 156,
                    "start": 1,
                  },
                  "posArgs": Array [
                    [Circular],
                  ],
                  "type": "OpCode",
                },
                "pos": Object {
                  "end": 154,
                  "start": 132,
                },
                "text": ".     arXiv:1704.00524",
                "type": "Text",
              },
            ],
            "index": 0,
            "parent": [Circular],
            "pos": Object {
              "end": 154,
              "start": 16,
            },
            "type": "Reference",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 256,
          "start": 250,
        },
        "type": "AllReferences",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 263,
          "start": 257,
        },
        "type": "AllApplications",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 264,
        "start": 0,
      },
      "raw": "
!R[ref-1](
    Ahn,~Byeongyong; Ik~Cho,~Nam (3~~April~~2017).
    \`Block-Matching Convolutional Neural Network for Image Denoising\`.
    arXiv:1704.00524
)

Block-Matching Convolutional Neural Network for Image Denoising described in [!RK[ref-1]].

!LAR[]
!LAA[]
",
      "type": "File",
    },
    "pos": Object {
      "end": 263,
      "start": 250,
    },
    "type": "Paragraph",
  },
]
`;

exports[`tables error block node in the name 1`] = `
Array [
  Object {
    "errorType": 3,
    "filePath": "test.md",
    "message": "Cannot use non-span nodes at argument name",
    "pos": Object {
      "end": Object {
        "absolute": 62,
        "column": 4,
        "line": 7,
      },
      "start": Object {
        "absolute": 41,
        "column": 1,
        "line": 5,
      },
    },
    "severity": "ERROR",
  },
  Object {
    "errorType": 3,
    "filePath": "test.md",
    "message": "Table must be followed by !T[] macros",
    "pos": Object {
      "end": Object {
        "absolute": 107,
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "absolute": 66,
        "column": 1,
        "line": 10,
      },
    },
    "severity": "ERROR",
  },
  Object {
    "errorType": 2,
    "filePath": "test.md",
    "message": "Unused picture label a",
    "pos": Object {
      "end": Object {
        "absolute": 62,
        "column": 4,
        "line": 7,
      },
      "start": Object {
        "absolute": 41,
        "column": 1,
        "line": 5,
      },
    },
    "severity": "WARNING",
  },
  Object {
    "errorType": 2,
    "filePath": "test.md",
    "message": "Undefined table label table-label",
    "pos": Object {
      "end": Object {
        "absolute": 17,
        "column": 17,
        "line": 2,
      },
      "start": Object {
        "absolute": 1,
        "column": 1,
        "line": 2,
      },
    },
    "severity": "ERROR",
  },
]
`;

exports[`tables table 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "index": 0,
        "parent": [Circular],
        "pos": Object {
          "end": 17,
          "start": 1,
        },
        "type": "TableKey",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 88,
        "start": 0,
      },
      "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
      "type": "File",
    },
    "pos": Object {
      "end": 17,
      "start": 1,
    },
    "type": "Paragraph",
  },
  Object {
    "header": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 50,
                  "start": 46,
                },
                "text": "asda",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 50,
              "start": 46,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 57,
                  "start": 51,
                },
                "text": "asdasd",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 57,
              "start": 51,
            },
            "type": "TableCell",
          },
        ],
        "parent": Object {
          "header": [Circular],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 88,
              "start": 0,
            },
            "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
            "type": "File",
          },
          "pos": Object {
            "end": 86,
            "start": 45,
          },
          "rows": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 78,
                        "start": 74,
                      },
                      "text": "asda",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 78,
                    "start": 74,
                  },
                  "type": "TableCell",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 85,
                        "start": 79,
                      },
                      "text": "asdasd",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 85,
                    "start": 79,
                  },
                  "type": "TableCell",
                },
              ],
              "parent": [Circular],
              "pos": Object {
                "end": 86,
                "start": 73,
              },
              "type": "TableRow",
            },
          ],
          "type": "Table",
        },
        "pos": Object {
          "end": 58,
          "start": 45,
        },
        "type": "TableRow",
      },
      Object {
        "children": Array [
          Object {
            "align": "Default",
            "joinColsRight": undefined,
            "joinRowsUp": undefined,
            "parent": [Circular],
            "pos": Object {
              "end": 64,
              "start": 60,
            },
            "type": "TableControlCell",
          },
          Object {
            "align": "Default",
            "joinColsRight": undefined,
            "joinRowsUp": undefined,
            "parent": [Circular],
            "pos": Object {
              "end": 71,
              "start": 65,
            },
            "type": "TableControlCell",
          },
        ],
        "parent": Object {
          "header": [Circular],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 88,
              "start": 0,
            },
            "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
            "type": "File",
          },
          "pos": Object {
            "end": 86,
            "start": 45,
          },
          "rows": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 78,
                        "start": 74,
                      },
                      "text": "asda",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 78,
                    "start": 74,
                  },
                  "type": "TableCell",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 85,
                        "start": 79,
                      },
                      "text": "asdasd",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 85,
                    "start": 79,
                  },
                  "type": "TableCell",
                },
              ],
              "parent": [Circular],
              "pos": Object {
                "end": 86,
                "start": 73,
              },
              "type": "TableRow",
            },
          ],
          "type": "Table",
        },
        "pos": Object {
          "end": 72,
          "start": 59,
        },
        "type": "TableControlRow",
      },
    ],
    "index": 0,
    "label": Object {
      "parent": Object {
        "keyArgs": Object {},
        "keys": Object {},
        "label": [Circular],
        "opcode": Object {
          "parent": [Circular],
          "pos": Object {
            "end": 21,
            "start": 20,
          },
          "text": "T",
          "type": "Text",
        },
        "parent": Object {
          "children": Array [],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 88,
              "start": 0,
            },
            "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
            "type": "File",
          },
          "pos": Object {
            "end": 43,
            "start": 19,
          },
          "type": "Paragraph",
        },
        "pos": Object {
          "end": 43,
          "start": 19,
        },
        "posArgs": Array [
          Array [
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 42,
                "start": 35,
              },
              "text": "a table",
              "type": "Text",
            },
          ],
        ],
        "type": "OpCode",
      },
      "pos": Object {
        "end": 33,
        "start": 22,
      },
      "text": "table-label",
      "type": "Text",
    },
    "name": Array [
      Object {
        "children": Array [],
        "parent": Object {
          "keyArgs": Object {},
          "keys": Object {},
          "label": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 33,
              "start": 22,
            },
            "text": "table-label",
            "type": "Text",
          },
          "opcode": Object {
            "parent": [Circular],
            "pos": Object {
              "end": 21,
              "start": 20,
            },
            "text": "T",
            "type": "Text",
          },
          "parent": Object {
            "children": Array [],
            "parent": Object {
              "children": [Circular],
              "parent": null,
              "path": "test.md",
              "pos": Object {
                "end": 88,
                "start": 0,
              },
              "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
              "type": "File",
            },
            "pos": Object {
              "end": 43,
              "start": 19,
            },
            "type": "Paragraph",
          },
          "pos": Object {
            "end": 43,
            "start": 19,
          },
          "posArgs": Array [
            Array [
              [Circular],
            ],
          ],
          "type": "OpCode",
        },
        "pos": Object {
          "end": 42,
          "start": 35,
        },
        "text": "a table",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": [Circular],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 88,
        "start": 0,
      },
      "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
      "type": "File",
    },
    "pos": Object {
      "end": 86,
      "start": 45,
    },
    "rows": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 78,
                  "start": 74,
                },
                "text": "asda",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 78,
              "start": 74,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 85,
                  "start": 79,
                },
                "text": "asdasd",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 85,
              "start": 79,
            },
            "type": "TableCell",
          },
        ],
        "parent": Object {
          "header": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 50,
                        "start": 46,
                      },
                      "text": "asda",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 50,
                    "start": 46,
                  },
                  "type": "TableCell",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "parent": [Circular],
                      "pos": Object {
                        "end": 57,
                        "start": 51,
                      },
                      "text": "asdasd",
                      "type": "Text",
                    },
                  ],
                  "parent": [Circular],
                  "pos": Object {
                    "end": 57,
                    "start": 51,
                  },
                  "type": "TableCell",
                },
              ],
              "parent": [Circular],
              "pos": Object {
                "end": 58,
                "start": 45,
              },
              "type": "TableRow",
            },
            Object {
              "children": Array [
                Object {
                  "align": "Default",
                  "joinColsRight": undefined,
                  "joinRowsUp": undefined,
                  "parent": [Circular],
                  "pos": Object {
                    "end": 64,
                    "start": 60,
                  },
                  "type": "TableControlCell",
                },
                Object {
                  "align": "Default",
                  "joinColsRight": undefined,
                  "joinRowsUp": undefined,
                  "parent": [Circular],
                  "pos": Object {
                    "end": 71,
                    "start": 65,
                  },
                  "type": "TableControlCell",
                },
              ],
              "parent": [Circular],
              "pos": Object {
                "end": 72,
                "start": 59,
              },
              "type": "TableControlRow",
            },
          ],
          "parent": Object {
            "children": [Circular],
            "parent": null,
            "path": "test.md",
            "pos": Object {
              "end": 88,
              "start": 0,
            },
            "raw": "
!TK[table-label]

!T[table-label](a table)

|asda|asdasd|
|----|------|
|asda|asdasd|

",
            "type": "File",
          },
          "pos": Object {
            "end": 86,
            "start": 45,
          },
          "rows": [Circular],
          "type": "Table",
        },
        "pos": Object {
          "end": 86,
          "start": 73,
        },
        "type": "TableRow",
      },
    ],
    "type": "TableProcessed",
  },
]
`;

exports[`tables table with macro err 1`] = `
Array [
  Object {
    "errorType": 0,
    "filePath": "test.md",
    "message": "Expected argument 'name'",
    "pos": Object {
      "end": Object {
        "absolute": 34,
        "column": 16,
        "line": 4,
      },
      "start": Object {
        "absolute": 19,
        "column": 1,
        "line": 4,
      },
    },
    "severity": "ERROR",
  },
  Object {
    "errorType": 3,
    "filePath": "test.md",
    "message": "Table must be followed by !T[] macros",
    "pos": Object {
      "end": Object {
        "absolute": 77,
        "column": 14,
        "line": 8,
      },
      "start": Object {
        "absolute": 36,
        "column": 1,
        "line": 6,
      },
    },
    "severity": "ERROR",
  },
  Object {
    "errorType": 2,
    "filePath": "test.md",
    "message": "Undefined table label table-label",
    "pos": Object {
      "end": Object {
        "absolute": 17,
        "column": 17,
        "line": 2,
      },
      "start": Object {
        "absolute": 1,
        "column": 1,
        "line": 2,
      },
    },
    "severity": "ERROR",
  },
]
`;
